[tool.poetry]
name = "simulation"
version = "0.1.0"
description = ""
authors = ["ranodmperson <kaicongtan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pymunk = "^5.6.0"
arcade = "^2.3.15"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
